# master_thesis_astorino

./: .gitignore  README.md
astorino-urdf_gripper_description/: package.xml  setup.cfg  setup.py
astorino-urdf_gripper_description/launch/: display.launch.py  gazebo.launch.py
astorino-urdf_gripper_description/meshes/: JT5_gray_1.stl  JT6_gold_1.stl  JT6_gray_1.stl  base_link.stl  link1_1.stl  link1_others_1.stl  link2_1.stl  link3_1.stl  link3_others_1.stl  link4_1.stl  link5_1.stl  link6_1.stl  simple_gripper_v2_1.stl
astorino-urdf_gripper_description/urdf/: astorino-urdf_gripper.gazebo  astorino-urdf_gripper.trans  astorino-urdf_gripper.xacro  materials.xacro
astorino_Arduino_code/: astorino.ino
astorino_detect/: package.xml  setup.cfg  setup.py
astorino_detect/astorino_detect/: cascade.py  cascade_box.xml  cascade_cylinder.xml  cascade_multiple.py  svm_box.xml  svm_cylinder.xml
astorino_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
astorino_gripper_moveit_config/config/: astorino-urdf_gripper.ros2_control.xacro  astorino-urdf_gripper.srdf  astorino-urdf_gripper.urdf.xacro  initial_positions.yaml  joint_limits.yaml
astorino_gripper_moveit_config/launch/: camera_pose.launch.py  demo.launch.py  main.launch.py  move_group.launch.py  moveit_rviz.launch.py  realsense_pose.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
astorino_planning/: CMakeLists.txt  package.xml
astorino_planning/src/: execute.cpp  execute_multiple.cpp  move_command_line.cpp  move_to_a_specific_position.cpp
astorino_tf_transform/: CMakeLists.txt  package.xml
astorino_tf_transform/src/: multiple_pose_stamped_to_world.cpp  pose_stamped_to_world.cpp
send_to_astorino/: CMakeLists.txt  package.xml
send_to_astorino/src/: check_movement.cpp  enable_motors.cpp  move_as_planning.cpp  move_to_turn_off_position.cpp  move_to_zero_position.cpp  open_gripper.cpp
